@@ -81,3 +81,4 @@ $font-serif: Roboto Slab, Georgia, serif;
 $thumbnail-width: 130px;
 $menu-width: 180px;
 $menu-width-max: 320px;
+$mobile-nav-indent: 50px;
